// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsPanelTest render - isPanelOpen = false 1`] = `
<GenericPanel
  className="settingsPanel"
  closeButtonAriaLabel="Close settings panel"
  hasCloseButton={true}
  headerText="Settings"
  innerPanelAutomationId="settings-panel"
  isOpen={false}
  onDismiss={[Function]}
>
  <TestSettings
    deps={
      Object {
        "detailsViewActionMessageCreator": Object {
          "closeSettingsPanel": [Function],
        },
        "settingsProvider": Object {
          "all": [Function],
        },
        "userConfigMessageCreator": Object {},
      }
    }
    featureFlagData={
      Object {
        "test-flag": false,
      }
    }
    userConfigurationStoreState={Object {}}
  />
  <TestSettings
    deps={
      Object {
        "detailsViewActionMessageCreator": Object {
          "closeSettingsPanel": [Function],
        },
        "settingsProvider": Object {
          "all": [Function],
        },
        "userConfigMessageCreator": Object {},
      }
    }
    featureFlagData={
      Object {
        "test-flag": false,
      }
    }
    userConfigurationStoreState={Object {}}
  />
  <TestSettings
    deps={
      Object {
        "detailsViewActionMessageCreator": Object {
          "closeSettingsPanel": [Function],
        },
        "settingsProvider": Object {
          "all": [Function],
        },
        "userConfigMessageCreator": Object {},
      }
    }
    featureFlagData={
      Object {
        "test-flag": false,
      }
    }
    userConfigurationStoreState={Object {}}
  />
</GenericPanel>
`;

exports[`SettingsPanelTest render - isPanelOpen = true 1`] = `
<GenericPanel
  className="settingsPanel"
  closeButtonAriaLabel="Close settings panel"
  hasCloseButton={true}
  headerText="Settings"
  innerPanelAutomationId="settings-panel"
  isOpen={true}
  onDismiss={[Function]}
>
  <TestSettings
    deps={
      Object {
        "detailsViewActionMessageCreator": Object {
          "closeSettingsPanel": [Function],
        },
        "settingsProvider": Object {
          "all": [Function],
        },
        "userConfigMessageCreator": Object {},
      }
    }
    featureFlagData={
      Object {
        "test-flag": false,
      }
    }
    userConfigurationStoreState={Object {}}
  />
  <TestSettings
    deps={
      Object {
        "detailsViewActionMessageCreator": Object {
          "closeSettingsPanel": [Function],
        },
        "settingsProvider": Object {
          "all": [Function],
        },
        "userConfigMessageCreator": Object {},
      }
    }
    featureFlagData={
      Object {
        "test-flag": false,
      }
    }
    userConfigurationStoreState={Object {}}
  />
  <TestSettings
    deps={
      Object {
        "detailsViewActionMessageCreator": Object {
          "closeSettingsPanel": [Function],
        },
        "settingsProvider": Object {
          "all": [Function],
        },
        "userConfigMessageCreator": Object {},
      }
    }
    featureFlagData={
      Object {
        "test-flag": false,
      }
    }
    userConfigurationStoreState={Object {}}
  />
</GenericPanel>
`;
